tests/dataset/tpc-h/compiler/cpp/q22.error
/tmp/TestCPPCompiler_TPCHQueriesq221231155647/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCHQueriesq221231155647/001/prog.cpp:241:35: error: ‘struct __struct4’ has no member named ‘size’
  241 |     auto row = Row{g.key, ((int)g.size()), total};
      |                                   ^~~~
/tmp/TestCPPCompiler_TPCHQueriesq221231155647/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq221231155647/001/prog.cpp:245:36: error: ‘r’ was not declared in this scope
  245 |     std::vector<std::pair<decltype(r.cntrycode), int>> __items;
      |                                    ^
/tmp/TestCPPCompiler_TPCHQueriesq221231155647/001/prog.cpp:245:50: error: template argument 1 is invalid
  245 |     std::vector<std::pair<decltype(r.cntrycode), int>> __items;
      |                                                  ^~~
/tmp/TestCPPCompiler_TPCHQueriesq221231155647/001/prog.cpp:245:53: error: template argument 1 is invalid
  245 |     std::vector<std::pair<decltype(r.cntrycode), int>> __items;
      |                                                     ^~
/tmp/TestCPPCompiler_TPCHQueriesq221231155647/001/prog.cpp:245:53: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCHQueriesq221231155647/001/prog.cpp:247:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  247 |       __items.push_back({r.cntrycode, r});
      |               ^~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq221231155647/001/prog.cpp:247:28: error: request for member ‘cntrycode’ in ‘r’, which is of non-class type ‘int’
  247 |       __items.push_back({r.cntrycode, r});
      |                            ^~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq221231155647/001/prog.cpp:249:23: error: request for member ‘begin’ in ‘__items’, which is of non-class type ‘int’
  249 |     std::sort(__items.begin(), __items.end(),
      |                       ^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq221231155647/001/prog.cpp:249:40: error: request for member ‘end’ in ‘__items’, which is of non-class type ‘int’
  249 |     std::sort(__items.begin(), __items.end(),
      |                                        ^~~
/tmp/TestCPPCompiler_TPCHQueriesq221231155647/001/prog.cpp:252:20: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  252 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::begin
In file included from /usr/include/c++/13/string:53,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /tmp/TestCPPCompiler_TPCHQueriesq221231155647/001/prog.cpp:4:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq221231155647/001/prog.cpp:252:20: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  252 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
In file included from /usr/include/c++/13/numeric:62,
                 from /tmp/TestCPPCompiler_TPCHQueriesq221231155647/001/prog.cpp:6:
/usr/include/c++/13/bits/stl_numeric.h: In instantiation of ‘_Tp std::accumulate(_InputIterator, _InputIterator, _Tp) [with _InputIterator = __gnu_cxx::__normal_iterator<any*, vector<any> >; _Tp = double]’:
/tmp/TestCPPCompiler_TPCHQueriesq221231155647/001/prog.cpp:233:29:   required from ‘main()::<lambda(auto:2)> [with auto:2 = std::vector<std::any>]’
/tmp/TestCPPCompiler_TPCHQueriesq221231155647/001/prog.cpp:234:7:   required from here
/usr/include/c++/13/bits/stl_numeric.h:141:46: error: no match for ‘operator+’ (operand types are ‘double’ and ‘std::any’)
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
In file included from /usr/include/c++/13/bits/stl_algobase.h:67,
                 from /usr/include/c++/13/algorithm:60,
                 from /tmp/TestCPPCompiler_TPCHQueriesq221231155647/001/prog.cpp:2:
/usr/include/c++/13/bits/stl_iterator.h:634:5: note: candidate: ‘template<class _Iterator> constexpr std::reverse_iterator<_Iterator> std::operator+(typename reverse_iterator<_Iterator>::difference_type, const reverse_iterator<_Iterator>&)’
  634 |     operator+(typename reverse_iterator<_Iterator>::difference_type __n,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:634:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   ‘std::any’ is not derived from ‘const std::reverse_iterator<_Iterator>’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/stl_iterator.h:1808:5: note: candidate: ‘template<class _Iterator> constexpr std::move_iterator<_IteratorL> std::operator+(typename move_iterator<_IteratorL>::difference_type, const move_iterator<_IteratorL>&)’
 1808 |     operator+(typename move_iterator<_Iterator>::difference_type __n,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1808:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   ‘std::any’ is not derived from ‘const std::move_iterator<_IteratorL>’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
In file included from /usr/include/c++/13/string:54:
/usr/include/c++/13/bits/basic_string.h:3553:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3553 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3553:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘double’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/basic_string.h:3571:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const _CharT*, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3571 |     operator+(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3571:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   mismatched types ‘const _CharT*’ and ‘double’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/basic_string.h:3590:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(_CharT, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3590 |     operator+(_CharT __lhs, const basic_string<_CharT,_Traits,_Alloc>& __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3590:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   ‘std::any’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/basic_string.h:3607:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const _CharT*)’
 3607 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3607:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘double’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/basic_string.h:3625:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, _CharT)’
 3625 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs, _CharT __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3625:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘double’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/basic_string.h:3637:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3637 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3637:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘double’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/basic_string.h:3644:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3644 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3644:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘double’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/basic_string.h:3651:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3651 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3651:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘double’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/basic_string.h:3674:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const _CharT*, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3674 |     operator+(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3674:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   mismatched types ‘const _CharT*’ and ‘double’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/basic_string.h:3681:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(_CharT, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3681 |     operator+(_CharT __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3681:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   ‘std::any’ is not derived from ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/basic_string.h:3688:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, const _CharT*)’
 3688 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3688:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘double’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
/usr/include/c++/13/bits/basic_string.h:3695:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, _CharT)’
 3695 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3695:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_numeric.h:141:46: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘double’
  141 |         __init = _GLIBCXX_MOVE_IF_20(__init) + *__first;
      |                                              ^
